updated team colors

--- a/css/default.css
+++ b/css/default.css
@@ -28,96 +28,96 @@ table {width: 100%;}
 
 .t20-ire,
 .t20-hover-ire:hover {
-    color: #0081E9 !important;
-    background-color: #FFFF3C !important
+    color: #30742D !important;
+    background-color: #06215C !important
 }
 
 .t20-aus,
 .t20-hover-aus:hover {
-    color: #EF1B23 !important;
-    background-color: #00008B !important
+    color: #0B661E !important;
+    background-color: #FFD500 !important
 }
 
 .t20-scot,
 .t20-hover-scot:hover {
-    color: #fff !important;
-    background-color: #4752a1 !important
+    color: #1D2338 !important;
+    background-color: #84A2E1 !important
 }
 
 .t20-sa,
 .t20-hover-sa:hover {
-    color: #B3A123 !important;
-    background-color: #2E0854 !important
+    color: #0B5425 !important;
+    background-color: #F5AB00 !important
 }
 
 .t20-wi,
 .t20-hover-wi:hover {
-    color: #fff !important;
-    background-color: #7fd2d8 !important
+    color: #7D1041 !important;
+    background-color: #E2DA14 !important
 }
 
 .t20-uae,
 .t20-hover-uae:hover {
-    color: #D1AB3E !important;
-    background-color: #004BA0 !important
+    color: #CE963F !important;
+    background-color: #FFFFFF !important
 }
 
 .t20-sl,
 .t20-hover-sl:hover {
-    color: #ED1B24 !important;
-    background-color: #DCDDDF !important
+    color: #1B2E96 !important;
+    background-color: #FFC500 !important
 }
 
 .t20-ban,
 .t20-hover-ban:hover {
-    color: #2B2A29 !important;
-    background-color: #EC1C24 !important
+    color: #00644C !important;
+    background-color: #F91A22 !important
 }
 
 .t20-nz,
 .t20-hover-nz:hover {
-    color: #254AA5 !important;
-    background-color: #CBA92B !important
+    color: #1F1F1F !important;
+    background-color: #E8EBED !important
 }
 
 .t20-zim,
 .t20-hover-zim:hover {
-    color: #000000 !important;
-    background-color: #FF822A !important
+    color: #CD151C !important;
+    background-color: #F8B526 !important
 }
 
 .t20-pak,
 .t20-hover-pak:hover {
-    color: #000000 !important;
-    background-color: #FF822A !important
+    color: #206500 !important;
+    background-color: #70E101 !important
 }
 
 .t20-ind,
 .t20-hover-ind:hover {
-    color: #000000 !important;
-    background-color: #FF822A !important
+    color: #0057AF !important;
+    background-color: #FF5500 !important
 }
 
 .t20-ned,
 .t20-hover-ned:hover {
-    color: #000000 !important;
-    background-color: #FF822A !important
+    color: #EF6C00 !important;
+    background-color: #212649 !important
 }
 
 .t20-afg,
 .t20-hover-afg:hover {
-    color: #000000 !important;
-    background-color: #FF822A !important
+    color: #0954AF !important;
+    background-color: #FC0011 !important
 }
 
 .t20-nam,
 .t20-hover-nam:hover {
-    color: #000000 !important;
-    background-color: #FF822A !important
+    color: #174CC5 !important;
+    background-color: #F81D00 !important
 }
 
 .t20-eng,
 .t20-hover-eng:hover {
-    color: #000000 !important;
-    background-color: #FF822A !important
+    color: #04064D !important;
+    background-color: #FE1448 !important
 }
